2012-05-15 Tsi YANG <tsi@in-cite.net>
	* Comments : Added TODO on hook
	* Feature: Partial implementation of hook on TCA FE Admin for table tx_icsoddatastore_files field file.

2012-05-14 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: Initialize renderEmpty function to tx_icsoddatastore_pi3 class

2012-05-03 Tsi YANG <tsi@in-cite.net>
	* Feature: Added datastore filemount.
	* Refactor: Added TCA field files on filegroup.
	
2012-04-25 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Add pagebrowse dependency
	* Version changed to 1.1.3

2012-04-17 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Feature: change filegroup view in BE module: only TCA fields are displayed
	* Fix: Field categories in backend module datastore

2012-03-27 Emilie SAGNIEZ  <emilie@in-cite.net>
	Feature: Added additionalListFieldsMarkers hook
	Fix: Corrected additionalSelectedCriteriaMarkers hook

2012-03-27 Tsi YANG <tsi@in-cite.net>
	* Feature: Added selected criteria informations on search form.
	* Refactor: Externalized setup css styles.
	* Fix: Mistakes on files generated url

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Feature: Add TS configuration: displayList.renderOnlySearchedFileFormats
	* Feature: Add title sorting to pi1 flexform
	* Fix: update autoload
	* Feature: Add typoscript that converts line breaks to <br />-tags in dataset description field 
	* Version changed to 1.1.2

2012-03-22 Tsi YANG <tsi@in-cite.net>
	* Documentation: Added documentation on "How to display last updated and last released" and stats download.

2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Change to version 1.1.1
	* Depends typo3 4.3 (scheduler)
	* Fix: add function to control piVars data format
	* Fix: add "enableFields" function at each SQL request

2012-03-22 Tsi YANG <tsi@in-cite.net>
	* Refactor: Removed categories pictos process to ics_od_categories extension.

2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Change to version 1.1.0

2012-03-20 Tsi YANG <tsi@in-cite.net>